# FireOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  LICENSE  README.md  build.ps1  main.cpp
App/: CMakeLists.txt  main.cpp
App/Resources/Shaders/: Fragment.glsl  Vertex.glsl
App/Source/: AppLayer.cpp  AppLayer.h  Main.cpp
Core/: CMakeLists.txt
Core/Source/Core/: Application.cpp  Application.h  EntryPoint.cpp  Event.h  Layer.h  Window.cpp  Window.h
Core/Source/Core/Common/: FileUtils.cpp  FileUtils.h  Macro.h
Core/Source/Core/Event/: Event.cpp  Event.h  KeyEvent.h  Modifier.h  MouseButtonEvent.h  MouseButtonType.cpp  MouseButtonType.h  MouseMoveEvent.h  MousePressType.cpp  MousePressType.h  ScrollEvent.h  TitleBarHitTestEvent.h  WindowFocusEvent.h  WindowMaximizeEvent.h  WindowPosEvent.h  WindowRefreshEvent.h  WindowSizeEvent.h
Core/Source/Core/Interactor/: AbstractCamera.cpp  AbstractCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Core/Source/Core/Log/: Log.cpp  Log.h
Core/Source/Core/Renderer/: EBO.cpp  EBO.h  GLApi.h  GLObject.cpp  GLObject.h  GLUtils.cpp  GLUtils.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramHelper.cpp  ShaderProgramHelper.h  ShaderProgramUtils.cpp  ShaderProgramUtils.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureUtils.cpp  TextureUtils.h  VAO.cpp  VAO.h  VBLayout.cpp  VBLayout.h  VBO.cpp  VBO.h
test/: CMakeLists.txt  test_glfw.cpp  test_glm.cpp  test_main.cpp
